Handle panning gestures messages properly on Windows. https://bugs.webkit.org/show_bug.cgi?id=121711.

Reviewed by Brent Fulgham.

This fixes a number of issues with panning gestures on Windows.
1. Two finger panning in one direction can sometimes cause some unexpected scrolling
in the other direction when the gesture first begins (directions meaning horizontal and vertical)
2. Single finger horizontal panning should only be disabled when attempting to select text.
3. Scrolling via panning should be clamped, other wise we can scroll contents completely out of the scrollview.
4. Horizontal overpan should work.
5. Overpan should occur whenever we scroll to the extents of whichever scroll view we're currently scrolling.

* WebView.cpp:
(WebView::gestureNotify):
(WebView::gesture):
* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::scrollByRecursively):
* rendering/RenderLayer.h:
Added an argument to keep track of which scrollview was actually scrolled
This is needed by the Windows port to keep track to determine whether or not
we need to overpan.


Canonical link: https://commits.webkit.org/139731@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156219 268f45cc-cd09-0410-ab3c-d52691b4dbfc